fix layout shifting on url change

--- a/client/app/common/common.styl
+++ b/client/app/common/common.styl
@@ -14,3 +14,4 @@ body
   // so setting top-level font-size to 62.5%
   // scales 1rem to equal 10px.
   font $primaryFont
+  overflow-y scroll
